# Humanizer

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/formatter/: time.rs
